[package]
name = "bitstable"
version = "0.1.0"
edition = "2021"
authors = ["Steven Geller"]
description = "A decentralized stable value protocol on Bitcoin using DLCs and market-based liquidations"
license = "Unlicense"
repository = "https://github.com/StevenGeller/bitstable"

[[bin]]
name = "bitstable-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "oracle-node"
path = "src/bin/oracle.rs"

[[bin]]
name = "liquidator-bot"
path = "src/bin/liquidator.rs"

[dependencies]
# Bitcoin with serde support and RPC
bitcoin = { version = "0.32", features = ["serde", "rand"] }
bitcoincore-rpc = "0.19"

# Networking and async
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Crypto
secp256k1 = { version = "0.29", features = ["rand"] }
sha2 = "0.10"

# Database
sled = "0.34"

# HTTP for oracle feeds
reqwest = { version = "0.12", features = ["json"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Random
rand = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding
hex = "0.4"

[dev-dependencies]
tempfile = "3.0"